--- a/Project.DataBase.MvcWebUI/Views/_Layout.cshtml
+++ b/Project.DataBase.MvcWebUI/Views/_Layout.cshtml
@@ -11,7 +11,7 @@
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </head>
-<body>
+<body style="overflow-x:hidden">
     <div class="col-md-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
