--- a/Project.DataBase.MvcWebUI/Views/_Layout.cshtml
+++ b/Project.DataBase.MvcWebUI/Views/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link active" aria-current="page" asp-controller="Account" asp-action="Login">Admin</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" asp-controller="Order" asp-action="Index">Orders</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav d-flex flex-row">
