layout product bug fix

--- a/Project.DataBase.MvcWebUI/Views/Cart/List.cshtml
+++ b/Project.DataBase.MvcWebUI/Views/Cart/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Project.DataBase.MvcWebUI.Models.CartListViewModel
 @{
     ViewBag.Title = "title";
-    Layout = "~/Views/_Layout.cshtml";
+    Layout = "~/Views/_Default.cshtml";
 }
 
 <h2>Your Cart</h2>
