--- a/Project.DataBase.MvcWebUI/Views/Cart/Complete.cshtml
+++ b/Project.DataBase.MvcWebUI/Views/Cart/Complete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Project.DataBase.MvcWebUI.Models.ShippingDetailsViewModel
 @{
     ViewBag.Title = "title";
-    Layout = "~/Views/_Layout.cshtml";
+    Layout = "~/Views/_Default.cshtml";
 }
 <h2>Shipping Details</h2>
 
