--- a/Project.DataBase.MvcWebUI/Views/Order/Index.cshtml
+++ b/Project.DataBase.MvcWebUI/Views/Order/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Project.DataBase.MvcWebUI.Models.OrderDetailModel
 
 @{
-    Layout = "~/Views/_Layout.cshtml";
+    Layout = "~/Views/_Default.cshtml";
 }
 
 <!DOCTYPE html>
