--- a/Project.DataBase.MvcWebUI/Views/_Default.cshtml
+++ b/Project.DataBase.MvcWebUI/Views/_Default.cshtml
@@ -8,42 +8,36 @@
     <link href="~/lib/bootstrap-icon/font/bootstrap-icons.css" rel="stylesheet" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 </head>
-<body style="overflow-x:hidden">
+<body>
     <div class="col-md-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Project</a>
+                <a class="navbar-brand" asp-controller="Product" asp-action="Index">Project</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item ">
-                            <a class="nav-link active" aria-current="page" asp-controller="Admin" asp-action="Index">Admin</a>
-                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Order" asp-action="Index">Orders</a>
+                            <a class="nav-link" asp-controller="Admin" asp-action="Index">Admin</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav d-flex flex-row">
                         <li class="nav-item dropdown,">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Cart
+                                User
                             </a>
-                            @await Component.InvokeAsync("CartSummary")
+                            @await Component.InvokeAsync("UserSummary")
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
     <dv class="row">
-        <div class="col-2">
-            @await Component.InvokeAsync("CategoryList")
-        </div>
-        <div class="col-10">
+        <div class="col-12">
             @if (TempData["message"] != null)
             {
                 <div class="alert alert-info" role="alert"> @TempData["message"]</div>
@@ -53,7 +47,7 @@
     </dv>
     <divclass class="col-md-12">
         Footer
-       
+
     </divclass>
 </body>
 </html>
