--- a/Project.DataBase.MvcWebUI/Views/_Layout.cshtml
+++ b/Project.DataBase.MvcWebUI/Views/_Layout.cshtml
@@ -15,7 +15,7 @@
     <div class="col-md-12">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Project</a>
+                <a class="navbar-brand" asp-controller="Product" asp-action="Index">Project</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -26,6 +26,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Order" asp-action="Index">Orders</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Product" asp-action="TopCustomerForTopProduct">TopCustomerForTopProduct</a>
                         </li>
                     </ul>
                     <ul class="nav navbar-nav d-flex flex-row">
