--- a/Project.DataBase.MvcWebUI/Views/Product/Index.cshtml
+++ b/Project.DataBase.MvcWebUI/Views/Product/Index.cshtml
@@ -2,25 +2,18 @@
 @{
     Layout = "~/Views/_Layout.cshtml";
 }
+<div class="row">
+    @foreach (var product in Model.Products)
+    {
+        <div class="col-2 rounded">
+            <p><img src="@product.ImageUrl" alt="My Image" width="200" height="200"></p>
+            <p>@product.ProductName</p>
+            <p>@product.UnitPrice ₺</p>
+            <p>@product.UnitsInStock</p>
+            <p><a class="btn btn-success btn-sm" asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@product.ProductId">add to cart</a></p>
+        </div>
 
-<div>
-    <table class="table table-responsive">
-        <tr>
-            <td>Product Name</td>
-            <td>Unit Price</td>
-            <td>Units In Stock</td>
-
-        </tr>
-        @foreach (var product in Model.Products)
-        {
-            <tr>
-                <td>@product.ProductName</td>
-                <td>@product.UnitPrice</td>
-                <td>@product.UnitsInStock</td>
-                <td><a class="btn btn-success btn-sm" asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@product.ProductId">add to cart</a></td>
-            </tr>
-        }
-    </table>
+    }
 </div>
 <product-list-pager current-category="@Model.CurrentCategory" current-page="@Model.CurrentPage" page-count="@Model.PageCount" page-size="@Model.PageSize">
 
