--- a/Project.DataBase.MvcWebUI/Views/Order/Index.cshtml
+++ b/Project.DataBase.MvcWebUI/Views/Order/Index.cshtml
@@ -41,7 +41,7 @@
                         @item.CompanyName
                     </td>
                     <td>
-                        @item.Total
+                        @item.Total ₺
                     </td>
                     <td>
                         <a class="text-success" title="Done" asp-controller="Order" asp-action="Done" asp-route-orderId="@item.OrderId"><i class="bi bi-check-circle"></i></a>
