--- a/Project.DataBase.MvcWebUI/Views/Shared/Components/ProductDetail/Default.cshtml
+++ b/Project.DataBase.MvcWebUI/Views/Shared/Components/ProductDetail/Default.cshtml
@@ -3,7 +3,7 @@
 {
     <tr>
         <td>@item.ProductName</td>
-        <td>@item.UnitPrice</td>
+        <td>@item.UnitPrice ₺</td>
         <td>@item.Quantity</td>
     </tr>
 }
